--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Revolutionize Your Fitness Journey</h1>
     <p>Join the next generation of fitness with AI and advanced recovery.</p>
     <div class="center-image">
-        <img src="flex.webp" alt="Fitness Illustration">
+        <img src="image/flex.webp" alt="Fitness Illustration">
     </div>
 </section>
 
