added other css file and update index

--- a/index.html
+++ b/index.html
@@ -11,28 +11,17 @@
 <header>
     <div>Koi Flow Fit</div>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="training.html">Training</a>
+        <a href="contact.html">Contact</a>
     </nav>
 </header>
 
-<section id="home" class="section">
+<section class="hero">
     <h1>Revolutionize Your Fitness Journey</h1>
-    <p>Join the next generation of fitness with AI and advanced recovery.</p>
     <div class="center-image">
-        <img src="image/flex.webp" alt="Fitness Illustration">
+        <img src="image/flex.webp" alt="Flexing Person">
     </div>
-</section>
-
-<section id="personalized" class="section">
-    <h1>Personalized Training</h1>
-    <p>AI-driven workouts tailored to your fitness goals.</p>
-</section>
-
-<section id="recovery" class="section">
-    <h1>Advanced Recovery</h1>
-    <p>Experience cutting-edge recovery technology for optimal performance.</p>
 </section>
 
 <footer>
