--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koi Flow Fit - Contact</title>
-    <link rel="stylesheet" href="contct.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
 
@@ -13,17 +13,17 @@
     <nav>
         <a href="home.html">Home</a>
         <a href="training.html">Training</a>
-        <a href="contac.html">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
 </header>
 
 <section class="contact-form">
     <h1>Contact Us</h1>
-    <form action="#" method="get">
-        <input type="text" name="name" placeholder="Your Name">
-        <input type="mail" name="email" placeholder="Your Email">
-        <textarea name="message" placeholder="Your Message"></textarea>
-        <buton type="submit">Submit</buton>
+    <form action="#" method="post">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Submit</button>
     </form>
 </section>
 
