small about us small about us

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,11 @@
     </form>
 </section>
 
+<section class="about-us">
+    <h2>About Us</h2>
+    <p>At Koi Flow Fit, we're revolutionizing fitness by combining personalized AI-driven workouts with advanced recovery technologies to help you achieve your goals faster and more efficiently. Our mission is to provide a holistic approach to fitness that adapts to your unique needs, helping you enhance performance and recover like never before.</p>
+</section>
+
 <footer>
     <p>&copy; 2024 Koi Flow Fit. All rights reserved.</p>
 </footer>
