--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
 <body>
 
 <header>
-    <div class="logo">Koi Flow Fit</div>
+    <div class="logo">
+        <img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo">
+    </div>
     <nav>
         <a href="home.html">Home</a>
         <a href="training.html">Training</a>
