--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <header>
     <div>Koi Flow Fit</div>
+    <div><img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo"></div>
     <nav>
         <a href="index.html">Home</a>
         <a href="training.html">Training</a>
