--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
 <header>
-    <div>Koi Flow Fit</div>
-    <div><img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo"></div>
+    <div class="logo">
+        <img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo">
+    </div>
     <nav>
         <a href="index.html">Home</a>
         <a href="training.html">Training</a>
