--- a/training.html
+++ b/training.html
@@ -7,14 +7,39 @@
     <link rel="stylesheet" href="training.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo">
+        </div>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="training.html">Training</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 
-<header>
-    <div class="logo">
-        <img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo">
-    </div>
-    <nav>
-        <a href="home.html">Home</a>
-        <a href="training.html">Training</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</header>
+    <section class="training-intro">
+        <h1>Training Powered by AI</h1>
+        <p>Reach your fitness goals with smart, AI-driven workout plans.</p>
+    </section>
+
+    <section class="features">
+        <div>
+            <h2>Personalized Plans</h2>
+            <p>Tailored workouts based on your progress.</p>
+        </div>
+        <div>
+            <h2>AI Insights</h2>
+            <p>Track progress and adapt workouts dynamically.</p>
+        </div>
+        <div>
+            <h2>Recovery Focus</h2>
+            <p>Integrated recovery for better performance.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Koi Flow Fitness</p>
+    </footer>
+</body>
+</html>
