--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class="logo">
-        <img src="image/LOGO KOI.png" alt="Koi Flow Fitness Logo">
+        <img src="image/logo_koi.png" alt="Koi Flow Fitness Logo">
     </div>
     <nav>
         <a href="index.html">Home</a>
