--- a/training.html
+++ b/training.html
@@ -13,7 +13,7 @@
         <img src="image/logo_koi.png" alt="Koi Flow Fitness Logo">
     </div>
     <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="training.html">Training</a>
         <a href="contact.html">Contact</a>
     </nav>
